ingress/ingress-objs/kibana-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana-logging
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: nginx                  # change to traefik if using traefik
    nginx.ingress.kubernetes.io/rewrite-target: /       # delete if using traefik
spec:
  rules:
  - host: kibana-logging.hvl.com
    http:
      paths:
      - backend:
          serviceName: kibana-logging
          servicePort: 5601
