ingress/ingress-objs/kube-dash-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: nginx 			# change to traefik if using traefik
    nginx.ingress.kubernetes.io/rewrite-target: / 	# delete if using traefik
spec:
  rules:
  - host: kubernetes-dashboard.hvl.com
    http:
      paths:
      - backend:
          serviceName: kubernetes-dashboard
          servicePort: 80
