ingress/ingress-objs/kubedash-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: kubedash
  namespace: kube-system
spec:
  tls:
    - hosts:
      - kubedash.dc01.havelsan.io
      secretName: dc01.havelsan.io
  rules:
  - host: kubedash.dc01.havelsan.io
    http:
      paths:
      - backend:
          serviceName: kubernetes-dashboard
          servicePort: 80
        path: /
---
