ingress/ingress-objs/mission-ing.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mission
  namespace: egys
  annotations:
    kubernetes.io/ingress.class: nginx                  # change to traefik if using traefik
    nginx.ingress.kubernetes.io/rewrite-target: /       # delete if using traefik
spec:
  tls:
    - hosts:
      - mission.dc01.havelsan.io
      secretName: dc01.havelsan.io
  rules:
  - host: mission.dc01.havelsan.io
    http:
      paths:
      - path: /
        backend:
          serviceName: task-manager
          servicePort: 8083
